# forfun

./: .gitignore  AGENTS.md  CMakeLists.txt  PROGRESS.md  todo.txt
docs/: architecture.md
include/backend/: codegen.h
include/frontend/: ast.h  lexer.h  parser.h  token.h
src/: CMakeLists.txt
src/backend/: codegen.c
src/driver/: main.c
src/frontend/: ast.c  lexer.c  parser.c
tests/: CMakeLists.txt
tests/unit/: test_codegen.c  test_lexer.c  test_parser.c
